{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 11,
  "lineage": "3f830c42-2f11-556e-ed1f-8afe2b5c963a",
  "resources": [
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-032ae1bccc5be78ca",
            "arn": "arn:aws:ec2:us-east-1:211125417674:instance/i-02b24e14fd29cad89",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02b24e14fd29cad89",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "personal",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0dfc4374e43ba2d04",
            "private_dns": "ip-172-31-1-123.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.1.123",
            "public_dns": "ec2-52-206-138-161.compute-1.amazonaws.com",
            "public_ip": "52.206.138.161",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fd546fd58606cc2e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "tf-ec2-sg-20250126180048454000000001"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08269d63fd2e078d2",
            "tags": {
              "Environment": "dev",
              "Name": "tf-Instance",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tf-Instance",
              "Terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "tf-practice-instance"
            },
            "vpc_security_group_ids": [
              "sg-0373b5320a3921211"
            ]
          },
          "dependencies": [
            "module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_instance.aws_iam_role.this",
            "module.ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_instance.data.aws_partition.current",
            "module.ec2_instance.data.aws_ssm_parameter.this",
            "module.security_group.aws_security_group.this",
            "module.security_group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125417674:security-group/sg-0373b5320a3921211",
            "description": "Security group for tf EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0373b5320a3921211",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "tf-ec2-sg-20250126180048454000000001",
            "name_prefix": "tf-ec2-sg-",
            "owner_id": "211125417674",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf-ec2-sg"
            },
            "tags_all": {
              "Name": "tf-ec2-sg"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0ac4e2d6c24ac64cc"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-67106148",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0373b5320a3921211",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.this",
            "module.security_group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    }
  ]
}